update notification design

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,5 @@
 {
+  "notifications":"Notifications",
   "areYou": "Are You",
   "shopOwner": "Shop Owner",
   "restaurantOwner": "Restaurant Owner",
