--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,7 @@
 {
-      "notifications":"الاشعارات",
+      "trainees":"المتدربين",
+  "my_booking":"طلباتي",
+   "notifications":"الاشعارات",
   "areYou": "هل أنت",
   "shopOwner": "صاحب محل",
   "restaurantOwner": "صاحب مطعم",
