--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,5 @@
 {
+  "my_booking":"My Booking",
   "notifications":"Notifications",
   "areYou": "Are You",
   "shopOwner": "Shop Owner",
@@ -217,7 +218,8 @@
   "chats":"Chats",
   "new_trainees":"The new trainees",
   "no_trainers":"No Trainers",
-"no_courses":"No Courses",
+  "trainees":"Trainees",
+  "no_courses":"No Courses",
 "active":"Active",
 
 "not_active":"Not Active",
