add link validation in create restaurant

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -320,5 +320,7 @@
 "remaining_duration": "المدة المتبقية",
 "messages":"الرسائل",
 
-"no_trainees":"لا يوجد متدربين"
+"no_trainees":"لا يوجد متدربين",
+"link_invalid":"الرابط غير صحيح"
+
 }
