--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -324,6 +324,8 @@
 "link_invalid":"الرابط غير صحيح",
 "manager_email": "بريد المدير",
     "manager_password": "كلمة مرور المدير",
-    "manager_phone": "رقم هاتف المدير"
+    "manager_phone": "رقم هاتف المدير",
+    
+"search_for_chat":"ابحث عن محادثة"
 
 }
