--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -274,5 +274,33 @@
 "manager_password":"Manager password",
 "manager_phone":"Manager Phone Number",
 "search_for_chat":"Search for any chat",
-"subscription_plan":"Subscription plan"
+"subscription_plan":"Subscription plan",
+"add_a_dish": "Add a Dish",
+"dish_name_in_arabic": "Dish Name in Arabic",
+"dish_name_in_english": "Dish Name in English",
+"attach_an_illustrative_image_of_the_dish": "Attach an Illustrative Image of the Dish",
+"choose_the_category": "Choose the Category",
+"dish_price": "Dish Price",
+"dish_components_in_arabic": "Dish Components in Arabic",
+"dish_components_in_english": "Dish Components in English",
+"add": "Add",
+"complete_data":"complete the data",
+
+"details_in_arabic": "Details in arabic",
+"details_in_english": "Details in english",
+"to":"to",
+
+"add_Product": "Add Product",
+"product_Name_Arabic": "Product Name in Arabic",
+"product_Name_English": "Product Name in English",
+"attach_Image_Product": "Attach an Image Representing the Product",
+"product_price": "Product Price",
+"product_ingred_ar": "Product Ingredients in Arabic",
+"product_ingred_en": "Product Ingredients in English",
+"most_wanted_products":"The most wanted products",
+"my_products":"My products",
+"my_plates":"My plates",
+"change":"change",
+"old_pass":"Old Password",
+"every_year":"Every year"
 }
