add temp free plan and update certificate done

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -354,7 +354,9 @@
 "my_plates":"أطباقي",
 "change":"تغير",
 "old_pass":"كلمة السر القديمة",
-"every_year":"كل سنة"
+"every_year":"كل سنة",
+"free_susbcription":"الباقة المجانية"
+
 
 
 }
