--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -302,5 +302,6 @@
 "my_plates":"My plates",
 "change":"change",
 "old_pass":"Old Password",
-"every_year":"Every year"
+"every_year":"Every year",
+"free_susbcription":"Free Subscription",
 }
