update user addreas

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -303,5 +303,5 @@
 "change":"change",
 "old_pass":"Old Password",
 "every_year":"Every year",
-"free_susbcription":"Free Subscription",
+"free_susbcription":"Free Subscription"
 }
