--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -358,6 +358,9 @@
 "free_susbcription":"الباقة المجانية",
 "dish_added_succ":"تم اضافة طبقك بنجاح",
 "go_to_my_dishes":"الذهاب الى اطباقي",
-"num_orders":"عدد الطلبات"
+"num_orders":"عدد الطلبات",
+
+"product_added_succ":"تمت اضافة منتجك بنجاح",
+"go_to_my_products":"الذهاب الى منتجاتي"
 
 }
