--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -306,5 +306,7 @@
 "free_susbcription":"Free Subscription",
 "dish_added_succ":"Your dish has been added successfully",
 "go_to_my_dishes":"Go to my dishes",
-"num_orders":"Number of orders"
+"num_orders":"Number of orders",
+"product_added_succ":"Your product has been added successfully",
+"go_to_my_products":"Go to my products"
 }
