refactor home product card for shop

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -371,6 +371,7 @@
 "cm":"سم",
 "kg":"كجم",
 
-"changes_in_bmi":"التغيرات في كتلة الجسم"
+"changes_in_bmi":"التغيرات في كتلة الجسم",
+"order":"طلب"
 
 }
