--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -316,5 +316,6 @@
 "trainee_at":"Trainee at",
 "cm":"CM",
 "kg":"KG",
-"changes_in_bmi":"Changes in BMI"
+"changes_in_bmi":"Changes in BMI",
+"order":"Order"
 }
