+ flutter_callkit_incoming

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -372,6 +372,7 @@
 "kg":"كجم",
 
 "changes_in_bmi":"التغيرات في كتلة الجسم",
-"order":"طلب"
+"order":"طلب",
+"the_member_left_the_call":"{name} لقد غادر المكالمة "
 
 }
