--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -318,5 +318,7 @@
 "cm":"CM",
 "kg":"KG",
 "changes_in_bmi":"Changes in BMI",
-"order":"Order"
+"order":"Order",
+"the_member_left_the_call":"{name} has left the call. If you need anything, feel free to reach out. See you!"
+
 }
