--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -319,6 +319,7 @@
 "kg":"KG",
 "changes_in_bmi":"Changes in BMI",
 "order":"Order",
-"the_member_left_the_call":"{name} has left the call. If you need anything, feel free to reach out. See you!"
+"the_member_left_the_call":"{name} has left the call. If you need anything, feel free to reach out. See you!",
+"the_member_decline_the_call":"{name} declined the call "
 
 }
